[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/building_widget.gd" id="1_script"]

[node name="BuildingWidget" type="PanelContainer"]
custom_minimum_size = Vector2(200, 240)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Building Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "+10 kW"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 11
text = "Description here..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
theme_override_font_sizes/font_size = 11
text = "Costs"
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_font_sizes/font_size = 10
text = "Owned: 0"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Build"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
